--- a/demos/demo.html
+++ b/demos/demo.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TreeNode</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0
+        }
+        html,body,#stage{
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
