--- a/demos/demo.html
+++ b/demos/demo.html
@@ -20,7 +20,7 @@
 <body>
 
     <div id="stage"></div>
-    <script type="text/javascript" src="../assets/demo.min.js"></script>
+    <script type="text/javascript" src="../dist/demo.min.js"></script>
 </body>
 
 </html>
